# lines

./: .gitignore  20lines.txt  CMakeLists.txt  README.md  crash.txt  fraction.cpp  fraction.hpp  fraction_test.cpp  image.py  input.txt  lines  lines.cpp  lines.hpp  lines_test.cpp  pyproject.toml  randomLines.py  run  test  toplines.cpp  trails
inc/: fraction.hpp  lines.hpp
inc/lines/: fraction.hpp
inputs/: 4lines-soln.txt  4lines.txt  4lines2-soln.txt  4lines2.txt  9lines-soln.txt  9lines.txt  combine10-soln.txt  combine10l.txt  combine10r.txt  combine11-soln.txt  combine11l.txt  combine11r.txt  combine1l.txt  combine1r.txt  combine2-soln.txt  combine2r.txt  combine3-soln.txt  combine3l.txt  combine3r.txt  combine4-soln.txt  combine4l.txt  combine4r.txt  combine5-soln.txt  combine5l.txt  combine5r.txt  combine6-soln.txt  combine6l.txt  combine6r.txt  combine7-soln.txt  combine7l.txt  combine7r.txt  combine8-soln.txt  combine8l.txt  combine8r.txt  combine9-soln.txt  combine9l.txt  combine9r.txt
python/: image.py  main.py  nest.py  parseLines.py  randomLines.py  toplines.py  trails.py
python_bindings/: CMakeLists.txt  lines_ext.cpp
scripts/: nest  ordinary_lines  trails  trails_nogui
src/: CMakeLists.txt  fraction.cpp  fraction.hpp  image.py  lines.cpp  lines.hpp  lines_ext.cpp  lines_test.cpp  main.py  nanobind_example_ext.cpp  parseLines.py  qt_test.py  randomLines.py  trails.cpp  trails.py
src/py_lines/: __init__.py
tests/: CMakeLists.txt  fraction_test.cpp  lines_test.cpp  test_basic.py  test_toplines.py
